--- a/pokemon-teams-frontend/index.html
+++ b/pokemon-teams-frontend/index.html
@@ -10,10 +10,12 @@
       <h2>Pokemon Teams!</h2>
     </header>
 
-    <main>
+    <main id="main">
       <!-- Add our Pokemon -->
     </main>
 
     <script src="./src/index.js"></script>
   </body>
 </html>
+
+
